@@ -1,17 +1,21 @@
 package gov.cms.mat.cql_elm_translation.utils;
 
-import java.io.File;
+import gov.cms.mat.cql_elm_translation.exceptions.InternalServerException;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.UncheckedIOException;
-import java.nio.file.Files;
 
 public class ResourceUtils {
   public static String getData(String resource) {
-    File file = new File(ResourceUtils.class.getResource(resource).getFile());
-    try {
-      return new String(Files.readAllBytes(file.toPath()));
+    try (InputStream inputStream = ResourceUtils.class.getResourceAsStream(resource)) {
+      if (inputStream == null) {
+        throw new InternalServerException("Unable to fetch resource " + resource);
+      }
+      return new String(inputStream.readAllBytes());
     } catch (IOException e) {
       throw new UncheckedIOException(e);
+    } catch (NullPointerException nullPointerException) {
+      throw new InternalServerException("Resource name cannot be null");
     }
   }
 }
